--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,21 @@ along with semanticcms-theme-documentation.  If not, see <http://www.gnu.org/lic
 		<url>https://github.com/aoindustries/semanticcms-theme-documentation/issues</url>
 	</issueManagement>
 
+	<repositories>
+		<!-- Repository required here, too, so can find parent -->
+		<repository>
+			<id>sonatype-nexus-snapshots</id>
+			<name>Sonatype Nexus Snapshots</name>
+			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
+			<releases>
+				<enabled>false</enabled>
+			</releases>
+			<snapshots>
+				<enabled>true</enabled>
+			</snapshots>
+		</repository>
+	</repositories>
+
 	<build>
 		<plugins>
 			<plugin>
