--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,10 @@ along with semanticcms-theme-documentation.  If not, see <http://www.gnu.org/lic
 				<li><a target="${javadoc.target}" href="https://semanticcms.com/theme-documentation/style/">SemanticCMS Theme Documentation Style</a></li>
 			</ul>
 		</div>]]></javadoc.modules>
+		<!-- SonarCloud.io -->
+		<sonar.projectKey>${project.groupId}:${project.artifactId}</sonar.projectKey>
+		<sonar.organization>aoindustries</sonar.organization>
+		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
 	</properties>
 
 	<name>SemanticCMS Theme Documentation²</name>
